Stop sidebar wrapping

--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -40,6 +40,7 @@ $border-style: 1px solid #ddd;
     .layout-col-left {
         float: left;
         width: 30%;
+        clear: left;
     }
 
     .layout-aside {
